--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "eslint-plugin-react": "^5.1.1"
   },
   "dependencies": {
-    "dotenv": "^8.1.0",
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "morgan": "^1.9.1"
